# rust-fullstack-chatapp

./: .gitignore  Cargo.toml
backend/: Cargo.toml  chat.html
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/state/: mod.rs
backend/src/ws/: mod.rs
common/: Cargo.toml  message.html
common/src/: lib.rs  reexports.rs
common/src/types/: api.rs  channels.rs  messages.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/macros/: Cargo.toml
frontend/macros/src/: lib.rs
frontend/src/: main.rs  utilities.rs  ws.rs
frontend/src/payload/: mod.rs
frontend/src/state/: mod.rs
frontend/src/ws_client/: callbacks.rs  mod.rs
