[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = [
    "ws",
    "headers",
    "http2",
    "macros",
    "multipart",
    "tracing",
] }
chrono = { version = "0.4.31", features = ["serde"] }

common = { path = "../common" }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
hyper = "0.14.27"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
traceback-derive = "0.1.1"
traceback-error = "0.1.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "serde",
    "serde_json",
    "env-filter",
] }

surrealdb = "1.0.2"
