[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
traceback-derive = "0.1.1"
traceback-error = "0.1.9"

web-sys = { version = "0.3.67", features = [
    "HtmlInputElement",
    "HtmlDocument",
] }
yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
yew-agent = "0.3.0"
gloo = "0.10.0"
gloo-net = "0.4.0"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
uuid = { version = "1.4.1", features = [
    "serde",
    "rand",
    "rng",
    "v4",
    "wasm-bindgen",
] }

reqwasm = "0.5.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
yew-oauth2 = { version = "0.7.0", features = ["openid", "router"] }

futures = "0.3.28"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
thiserror = "1.0.49"
js-sys = "0.3.67"
serde-wasm-bindgen = "0.6.0"
